Add section 4.3 code to migrate shared functions to a shared input component

--- a/app/components/base/input/template.html
+++ b/app/components/base/input/template.html
@@ -1,4 +1,4 @@
-<form class="forms filter-input-form">
+<form class="forms <%= formClass %>">
   <row end>
     <column cols="12">
       <input type="text" placeholder="<%= placeholder %>">
