Prepare branch for section 4.4 tutorial

--- a/app/components/base/input/template.html
+++ b/app/components/base/input/template.html
@@ -1,7 +1,7 @@
 <form class="forms <%= formClass %>">
   <row end>
     <column cols="12">
-      <input type="text" placeholder="<%= placeholder %>">
+      <input type="text" name="baseinput" placeholder="<%= placeholder %>">
     </column>
   </row>
 </form>
