Add section 5.1 code to escape and trim input strings, and pad display strings

--- a/app/components/recipes/card/template.html
+++ b/app/components/recipes/card/template.html
@@ -5,7 +5,7 @@
 
   <div class="card-content">
     <p><%- description %></p>
-    <p class="small">posted by <span data-filter-text><%= user.username %></span></p>
+    <p class="small"><%= pad('posted by', 10) %><span data-filter-text><%= user.username %></span></p>
     <p class="tags"></p>
   </div>
 </div>
