--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@ button {
   border: 1px solid #ddd;
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px #999;
+  min-height: 400px;
   padding: 8px 16px;
 }
 
@@ -45,6 +46,23 @@ button {
 .card-content .tag {
   float: left;
   margin: 3px;
+}
+
+/*
+ * MODALS
+ */
+.modal-title,
+.modal-content {
+  margin-bottom: 16px;
+}
+.modal-image {
+  text-align: center;
+}
+.modal-image img {
+  border-radius: 5px;
+  height: 200px;
+  object-fit: cover;
+  width: 75%;
 }
 
 /*
