--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,6 +55,33 @@ button {
 .modal-content {
   margin-bottom: 16px;
 }
+.modal-content-user {
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+  height: 0;
+  margin: 0;
+  opacity: 0;
+  padding: 0;
+  -webkit-transition: all .25s ease-out;
+  -moz-transition: all .25s ease-out;
+  -ms-transition: all .25s ease-out;
+  -o-transition: all .25s ease-out;
+  transition: all .25s ease-out;
+}
+.modal-content-user.active {
+  height: auto;
+  margin: 8px 0;
+  min-height: 150px;
+  opacity: 1;
+  padding-top: 8px;
+}
+.modal-content-user a {
+  cursor: pointer;
+}
+.modal-content-user img {
+  border-radius: 50%;
+  width: 50px;
+}
 .modal-image {
   text-align: center;
 }
