Prepare branch for section 5.2 tutorial

--- a/app/components/forms/recipe/template.html
+++ b/app/components/forms/recipe/template.html
@@ -8,6 +8,9 @@
       <textarea maxlength="250" name="description" placeholder="Description (max 250 characters)" rows="5"></textarea>
     </section>
     <section>
+      <input class="width-12" maxlength="250" name="image" placeholder="Image URL (max 250 characters)" type="text">
+    </section>
+    <section>
       <input type="text" maxlength="50" name="tagsinput" placeholder="Add Tag and Press Enter">
       <input type="hidden" name="tags">
       <div class="recipe-labels">
